Adjust benchmark default configuration